--- a/html/templete.html
+++ b/html/templete.html
@@ -1,1 +1,2 @@
-<p style="text-align: justify;"><span style="text-align: center;">이것은&nbsp;설정 파일들을 뜯어보면 쉽게 확인할 수 있습니다.</span></p>
+<h1>sadfasf</h1>
+<script>location=' s  javascript:    alert\x281\x29'</script>
